--- a/packages/hoppscotch-sh-admin/assets/scss/styles.scss
+++ b/packages/hoppscotch-sh-admin/assets/scss/styles.scss
@@ -433,6 +433,7 @@ pre.ace_editor {
 
 .toasted-container {
   @apply max-w-md;
+  @apply z-[100000];
 
   .toasted {
     &.toasted-primary {
