--- a/packages/hoppscotch-ui/src/assets/scss/histoire.scss
+++ b/packages/hoppscotch-ui/src/assets/scss/histoire.scss
@@ -423,6 +423,7 @@ pre.ace_editor {
 
 .toasted-container {
   @apply max-w-md;
+  @apply z-[100000];
 
   .toasted {
     &.toasted-primary {
